--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-gpg==1.24.1
-packaging==24.2
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.1/libexec/wheel-0.45.1-py3-none-any.whl#sha256=da46333d5dcbde6e20cf7e2f8fff9e9ce76e8c94dc4afd6fb95fc4bc2745fb5e
+anyio==4.8.0
+certifi==2024.12.14
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+python-dotenv==1.0.1
+python-telegram-bot==21.10
+sniffio==1.3.1
